# idevicerestore

./: .gitignore  .gitmodules  AUTHORS  AlmogMagicCommandToBuild.txt  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  configure  configure.ac  git-version-gen  instmob.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  c-cpp.yml  curl.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
docker/: Dockerfile  build.sh  idevicerestore.sh  run.sh
docs/: Makefile.am  NOTES.md  idevicerestore.1
idevicerestoreCmdLine/: cmdLineExample.txt  envExample.txt  idevicerestoreParams.ini  run_idevicerestore.bat  run_mce_debug.bat  run_usbmuxdhost.bat  usbmuxdCmdLine.txt
src/: Makefile.am  Makefile.in  ace3.c  ace3.h  activate.c  activate.h  asr.c  asr.h  base64.c  base64.h  common.c  common.h  dfu.c  dfu.h  download.c  download.h  endianness.h  fdr.c  fdr.h  fls.c  fls.h  ftab.c  ftab.h  idevicerestore.c  idevicerestore.h  img3.c  img3.h  img4.c  img4.h  ipsw.c  ipsw.h  jsmn.c  jsmn.h  json_plist.c  json_plist.h  libirecovery.c  libirecovery.h  limera1n.c  limera1n.h  limera1n_payload.h  (+22 more)
